# Payments-Backend-dodo

./: .dockerignore  .env.example  .gitignore  API.md  API_TESTING.md  Cargo.toml  DESIGN.md  DODO.postman_collection.json  Dockerfile  README.md  docker-compose.yml  otel-collector-config.yaml  test_rate_limit.sh
Tests/crud/: account_test.rs  api_key_test.rs  rate_limiter_test.rs  transaction_test.rs  transfer_flow_test.rs
Tests/errors/: errors_test.rs
Tests/health/: health_test.rs
init-db/: 01-init-payments.sql
src/: lib.rs  main.rs  routes.rs  state.rs
src/controllayer/: mod.rs
src/controllayer/accounts/: accounts_handler.rs  mod.rs
src/controllayer/health/: health.rs
src/controllayer/transfers/: mod.rs  queries.rs  transfers.rs
src/datalayer/: mod.rs
src/datalayer/CRUD/: account_db.rs  accounts.rs  api_key.rs  mod.rs  rate_limiter.rs  transaction.rs  webhook.rs
src/datalayer/CRUD/helper/: apikey_generator.rs  conversion.rs  email_regex.rs  mod.rs
src/datalayer/CRUD/helper/ratelimiting/: mod.rs  rate_limiter_with_backoff.rs
src/datalayer/CRUD/helper/transaction/: transaction.rs
src/datalayer/CRUD/money/: mod.rs  money.rs
src/datalayer/CRUD/redis/: redis.rs
src/datalayer/CRUD/sql_generator/: mod.rs  sql_generator.rs
src/datalayer/CRUD/types/: mod.rs  types.rs
src/datalayer/db_ops/: db_health.rs  db_ops.rs  mod.rs
src/datalayer/db_ops/connection_pool/: builder.rs  connection_pool.rs  mod.rs  pool_state_tracker.rs
src/datalayer/db_ops/constants/: constants.rs  mod.rs  types.rs
src/datalayer/helper/: backoff.rs  mod.rs
src/errors/: dberrors.rs  errors.rs  mod.rs
src/handlers/: accounts.rs  health.rs  mod.rs  transfer.rs  webhooks.rs
src/logging/: mod.rs  telemetry.rs
src/middleware/: auth.rs  error.rs  ip_rate_limit.rs  mod.rs  rate_limit.rs  request_id.rs
src/services/: mod.rs  webhook_dispatcher.rs
