[package]
name = "payments-backend-dodo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"], optional = true }

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry
opentelemetry = { version = "0.24", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.17", features = ["metrics", "trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.16"
tracing-opentelemetry = "0.25"

# Async utilities
async-trait = "0.1"
once_cell = "1.21.3"
rand = "0.8"
regex = "1.12.2"
sea-query = { version = "0.32.7", features = ["thread-safe", "postgres-types", "with-chrono", "with-uuid", "with-json"] }

# Redis for rate limiting
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12.1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
sha2 = "0.10"

[features]
default = ["sqlx"]

[[test]]
name = "account_test"
path = "Tests/crud/account_test.rs"

[[test]]
name = "transaction_test"
path = "Tests/crud/transaction_test.rs"

[[test]]
name = "transfer_flow_test"
path = "Tests/crud/transfer_flow_test.rs"

[[test]]
name = "rate_limiter_test"
path = "Tests/crud/rate_limiter_test.rs"

[[test]]
name = "api_key_test"
path = "Tests/crud/api_key_test.rs"
